# car_management_system

./: README.md  config.yml  pyproject.toml  setup.py
src/: main.py
src/data/: car_management.db
src/database/: db_manager.py
src/gui/: dialogs.py  main_window.py  widgets.py
src/models/: __init__.py  car.py  customer.py
src/utils/: __init__.py  config.py  error_handler.py  logger.py  pdf_generator.py
